# tara

./: .gitattributes  .gitignore  README.md  audit_parse.py  audit_summary_prompt.txt  chat_responses.py  chat_system.py  chunking.ipynb  chunking.py  dashboard.py  feedback.py  frontend.ipynb  interaction_system.py  langchain.ipynb  prompt_testing.ipynb  pyproject.toml  rag_system.py  reqs.txt  requirements.txt  retrieval.ipynb  retrieval.py  system_prompt.txt  tara_prompt.txt  tools.py  vector_store.py
chroma_db/: chroma.sqlite3
chroma_db/a76e9151-51d8-479a-aebf-2baab2163913/: index_metadata.pickle
prompts/: audit_summary_prompt.txt  retriever_prompt.txt  tara_prompt.txt
